Attempt at fixing the Noto font issue on mobile.

--- a/src/Style/index.css
+++ b/src/Style/index.css
@@ -4,4 +4,5 @@
 
 body {
 	--google-font-color-notocoloremoji: none;
+	-webkit-transform: translate3d(0,0,0);
 }
